k3s-flask-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reu-flask-svc
spec:
  selector:
    app: reu-flask
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
